--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Button from "../components/Button.astro";
 <MainLayout title="Titel">
 	<main class="container mx-auto p-4">
 
-		<div class="mb-250">
+		<!-- <div class="mb-250">
 			<p>Hej</p>
 		</div>
 
@@ -28,8 +28,39 @@ import Button from "../components/Button.astro";
 				<img src="/src/assets/images/cart.png" alt="" class="grayscale">
 			</div>
 
-		</section>
+		</section> -->
 
+			<section class="max-h-150 bg-blue-100">
+				<div class="flex flex-row tidslinje max-h-100">
+					<ul class="overflow-y-scroll w-100">
+						<li><h1>2008</h1></li>
+						<li><h1>2009</h1></li>
+						<li><h1>2010</h1></li>
+						<li><h1>2011</h1></li>
+						<li><h1>2012</h1></li>
+						<li><h1>2013</h1></li>
+						<li><h1>2014</h1></li>
+						<li><h1>2015</h1></li>
+					</ul>
+
+					<div class="flex flex-row">
+						
+						<img src="/src/assets/images/cart.png" alt="">
+						<div class="flex flex-col gap-10">
+							<h1>Begyndelsen</h1>
+							<p>Stop Spild Af Mad blev stiftet af Selina Juul i 2008 som en facebook gruppe, men voksede hurtigt til en anderkendt frivilligt og selvstændigt non-profit. 
+							Selina Juul var motiveret af hendes fortid i Moskva, hvor hun oplevede stor fødevaremangel. Da hun kom til Danmark tog hun derfor kampen op i mod madspild. </p>
+						</div>
+
+					</div>
+				</div>
+			</section>
+
+			<style>
+				h1{
+					font-size: 4rem;
+				}
+			</style>
 
 		
 <script>
