ADDED Active and inactive classes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,14 +52,14 @@ import Button from "../components/Button.astro";
 						</div>
 					</div>
 
-					<!-- <div class="flex flex-row inactiveBox">
+					<div class="flex flex-row inactiveBox">
 						<img src="/src/assets/images/cart.png" alt="">
 						<div class="flex flex-col gap-10">
 							<h1>Begyndelsen</h1>
 							<p>Stop Spild Af Mad blev stiftet af Selina Juul i 2008 som en facebook gruppe, men voksede hurtigt til en anderkendt frivilligt og selvstændigt non-profit. 
 							Selina Juul var motiveret af hendes fortid i Moskva, hvor hun oplevede stor fødevaremangel. Da hun kom til Danmark tog hun derfor kampen op i mod madspild. </p>
 						</div>
-					</div> -->
+					</div>
 
 				</div>
 			</section>
@@ -68,6 +68,7 @@ import Button from "../components/Button.astro";
 
 				.activeTime{
 					color: red;
+					cursor: default;
 
 				}
 
